# routes/index.js
@@ -1,3 +1,5 @@
+const passport = require('passport');
+
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
@@ -10,5 +12,15 @@ router.get('/', (req, res) => {
 
 router.use('/characters', require('./characters'));
 router.use('/deities', require('./deities'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    })
+});
+
 
 module.exports = router;
