# server.js
@@ -1,22 +1,66 @@
 const express = require('express');
 const bodyParser = require('body-parser');
-const mongodb = require('./data/database')
+const mongodb = require('./data/database');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
+
+
 const app = express();
 
 const port = process.env.PORT || 3000;
 
-app.use(bodyParser.json());
-app.use(bodyParser.urlencoded({
+app.use(bodyParser.json())
+.use(bodyParser.urlencoded({
     extended: true
-}));
-app.use((req, res, next) => {
+}))
+.use(session({
+    secret: "secret",
+    resave: false,
+    saveUninitialized: true ,
+}))
+.use(passport.initialize())
+.use(passport.session())
+.use((req, res, next) => {
     res.setHeader('Access-Controll-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept, Z-Key');
     res.setHeader('Access-Control-Allow-Methods', "GET, POST, PUT, DELETE, OPTIONS");
     next();
 })
+.use(cors({ methods: ['GET', 'POST', 'DELETE', 'PUT', 'OPTIONS']}))
+.use(cors({ origin: '*'}))
+.use('/', require('./routes'));
 
-app.use('/', require('./routes'));
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+    // User.findOrCreate({ githubId: profile.id}, function (err. user) {
+    return done(null, profile);
+    //});
+}
+))
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
+passport.deserializeUser((user, done) => {
+    done(null, user);
+})
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")});
+
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session: false}),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    }
+)
+
 
 mongodb.initDb((err) => {
     if(err) {
